# company-brain

./: .env  .env.example  .gitignore  ADR-001-enhanced-extraction-pipeline.md  ADR-003-query-and-function-context-extraction.md  ADR-004-tiered-memory-and-context-assembly.md  ADR-005-hierarchical-extraction-context.md  ADR-006-WEEK1-SUMMARY.md  ADR-006-multi-agent-extraction-layer.md  ADR-007-merkle-tree-treesitter-incremental-indexing.md  AGENTS.md  CLAUDE-CODE-TAKEOVER.md  Makefile  Makefile.demo  POST-MERGE-RUNBOOK.md  PROJECT_CONTEXT.md  PROVIDER-SETUP.md  README.md  build-prompt.md  business-context-v0.2.md  claude-code-architecture.md  code-business-bridge-v0.2.md  code-context-v0.2.md  company-brain-v2-system-design.md  docker-compose.infra.yml  docker-compose.yml  harness-system-design.md  package-lock.json  package.json  repotoken.txt  schema-v0.1.md  tsconfig.base.json
company-brain-ai/: .env  .env.example  .gitignore  Dockerfile  pyproject.toml
company-brain-ai/.brain-template/: BRAIN.md
company-brain-ai/.brain-template/hooks/: on_truncation.sh.example  post_extraction.sh.example  post_query.sh.example  post_storage.sh.example  pre_extraction.sh.example  pre_query.sh.example  pre_storage.sh.example  session_end.sh.example  session_start.sh.example
company-brain-ai/fixtures/network-iq-snapshot/: Dockerfile  README.md  docker-compose.yml  pom.xml
company-brain-ai/fixtures/plugins/acme-spring-boot/: plugin.json
company-brain-ai/frameworks/django/: SKILL.md
company-brain-ai/frameworks/fastapi/: SKILL.md
company-brain-ai/frameworks/nestjs/: SKILL.md
company-brain-ai/frameworks/nextjs/: SKILL.md
company-brain-ai/frameworks/rails/: SKILL.md
company-brain-ai/frameworks/spring-boot/: SKILL.md
company-brain-ai/src/company_brain_ai.egg-info/: SOURCES.txt  requires.txt
company-brain-ai/src/companybrain/: cli.py  config.py  db.py
company-brain-ai/src/companybrain/agents/: answerer_agent.py  base_agent.py  context_agent.py  exploration_agent.py  iterative_answerer.py  knowledge_navigator_agent.py  navigator_agent.py  specialist_agent.py  verifier_agent.py
company-brain-ai/src/companybrain/api/: intent_router.py  main.py
company-brain-ai/src/companybrain/assembly/: __init__.py  classifier.py  compressor.py  mmr.py  renderer.py  smart_zone.py  tiering.py  types.py
company-brain-ai/src/companybrain/audit/: __init__.py  audit_log.py  audit_query.py  audit_writer.py
company-brain-ai/src/companybrain/cache/: __init__.py  query_cache.py
company-brain-ai/src/companybrain/checks/: __init__.py  drift_check.py
company-brain-ai/src/companybrain/cli_helpers/: brain_enrich.py  brain_rebuild.py  endpoint_discovery.py  headless.py  repo_walker.py  upgrade_business_context.py
company-brain-ai/src/companybrain/collectors/: base.py  code_tracer.py  git_collector.py  llm_handler_finder.py  manifest_filter.py  smart_method_extractor.py
company-brain-ai/src/companybrain/confidence/: __init__.py  aggregator.py  helpers.py  signals.py  verbalizer.py
company-brain-ai/src/companybrain/connectors/: __init__.py  base.py  code.py  pipeline.py  registry.py
company-brain-ai/src/companybrain/drift/: __init__.py  models.py  scheduler.py  scorer.py  state_machine.py  store.py
company-brain-ai/src/companybrain/edges/: taxonomy.py
company-brain-ai/src/companybrain/events/: __init__.py  emitter.py  models.py  store.py  views.py
company-brain-ai/tests/acceptance/: test_big_repo_recovery.py  test_business_context_v2_quality.py  test_cross_file_pass_lob.py  test_dedup_acceptance.py  test_drift_e2e.py  test_e1_through_e7.py  test_event_stream_e2e.py  test_exploration_e2e.py  test_few_shot_e2e.py  test_glossary_e2e.py  test_harness_p1.py  test_harness_p2_subagents.py  test_harness_p3_skills.py  test_harness_p4_full.py  test_harness_p5_slash_mcp.py  test_harness_p6_marketplace.py  test_harness_p7_ide.py  test_iterative_quality.py  test_no_silent_truncation.py  test_no_truncation.py  test_no_truncation_e2e.py  test_notion_connector_e2e.py  test_per_language.py  test_persona_e2e.py  test_pii_redaction_e2e.py  test_pipeline_cost_targets.py  test_resolution_e2e.py  test_risk_alerts_and_domain_inference.py  test_schema_lob_column_resolved.py  test_sql_deep_extraction.py  test_streaming_e2e.py  test_taxonomy_contract.py  test_two_agent_extraction.py  test_universal_extraction_network_iq.py  test_verifier_drops_hallucinated_lob.py
company-brain-ai/tests/api/: test_query_response_schema.py
company-brain-ai/tests/integration/: test_hybrid_search.py  test_mcp_server.py  test_no_orphan_edges.py  test_smart_zone.py  test_urn_alignment.py
company-brain-ai/tests/passes/: test_annotation_pass.py  test_client_call_pass.py  test_e2e_per_language.py  test_schema_migration_pass.py  test_storage_target_pass.py  test_test_coverage_pass.py
company-brain-ai/tests/quality/: __init__.py  blast_radius_recall_test.py  citation_test.py  confidence_test.py  harness.py  latency_test.py  sql_coverage_test.py
company-brain-ai/tests/regression/: test_golden_business_context.py  test_p0_bugs.py
company-brain-ai/tests/unit/: test_audit_log_chain.py  test_batch_planner.py  test_brain_events.py  test_business_context_v2.py  test_compaction.py  test_confidence_aggregator.py  test_confidence_verbalizer.py  test_connector_base.py  test_connector_pipeline.py  test_connector_registry.py  test_context_agent.py  test_cross_cutting.py  test_drift_models.py  test_drift_scorer.py  test_drift_state_machine.py  test_event_store.py  test_exploration_agent.py  test_exploration_loop.py  test_few_shot_bank.py  test_formatters.py  test_glossary_discoverer.py  test_harness_loop.py  test_hooks.py  test_image_extractor.py  test_iterative_answerer.py  test_iterative_patterns.py  test_mcp_server.py  test_memory.py  test_name_matcher.py  test_notebook_chunker.py  test_notes.py  test_notion_block_parser.py  test_notion_sync_cursor.py  test_permissions.py  test_pii_detector.py  test_plugins.py  test_prompt_cache.py  test_query_cache.py  test_resolution_models.py  test_resolver.py  (+18 more)
(+823 files in other folders)
